--- a/public/link_telegram.html
+++ b/public/link_telegram.html
@@ -5,6 +5,7 @@
     <title>Telegram Test</title>
 </head>
 <body>
+    sdf
     <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="DFAssist_Notify_Bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
     <script type="text/javascript">
     function onTelegramAuth(user) {
